// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DefaultPage renders correctly 1`] = `
<DocumentFragment>
  <main>
    <header />
    <section
      class="section"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-12"
          >
            <div>
              [object Object]
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`DefaultPageTemplate renders content correctly 1`] = `
<DocumentFragment>
  <header />
  <section
    class="section"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-12"
        >
          <div>
            content
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`DefaultPageTemplate renders html content correctly 1`] = `
<DocumentFragment>
  <header />
  <section
    class="section"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-12"
        >
          <div>
            [object Object]
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
